[project]
name = "skywallker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.7.14",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "selenium>=4.34.2",
    "tabulate>=0.9.0",
    "tensorflow>=2.19.0",
]
